--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "postcss-loader": "^1.2.1",
     "postcss-reporter": "^3.0.0",
     "react": "^15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.2.2",
     "react-modal": "^1.6.5",
