--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-plugin-transform-react-constant-elements": "^6.5.0",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.3",
@@ -95,7 +97,6 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.2.2",
-    "react-modal": "^1.6.5",
     "react-redux": "^4.4.5",
     "react-router": "^2.7.0",
     "react-router-redux": "^4.0.0",
